--- a/travel-expert/style.css
+++ b/travel-expert/style.css
@@ -4,18 +4,16 @@
   box-sizing: border-box;
 }
 
-body * {
-  font-family: "Cinzel", serif;
-}
-
 body {
-  text-align: center;
-  padding: 200px;
-
-  background-image: url(./assets/travel.jpg);
+  font-family: "Cinzel", serif;
+  background-image: url("https://i.ibb.co/2j5hVRf/background-image-1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   height: 100vh;
+
+  display: grid;
+  place-content: center;
 }
 
 h1 {
@@ -37,6 +35,12 @@ p {
   margin-bottom: 72px;
 }
 
+div {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
 a {
   padding: 16px 32px;
   text-decoration: none;
@@ -45,8 +49,13 @@ a {
   line-height: 24px;
 }
 
+a:hover,
 .btn-color {
   background-color: #db2777;
   color: #ffffff;
   border-radius: 80px;
+}
+
+.btn-color:hover {
+  background-color: #240312;
 }
